# docTBLextract

./: .gitignore  README.md  docTBLextract.py  pyproject.toml
